--- a/apple-watch/css/main.css
+++ b/apple-watch/css/main.css
@@ -30,7 +30,7 @@ body {
 
 .card-text {
     font-size: 14px;
-    line-height: 1.5em;
+    line-height: 1.5;
     margin-bottom: 30px;
     padding: 0 5px;
 }
@@ -54,7 +54,7 @@ body {
     font-weight: 700;
     font-size: 22px;
     color: #FFFFFF;
-    background: #CD2626;
+    background-color: #CD2626;
     border-radius: 8px;
     padding: 16px 42px 17px;
     transition: 0.2s ease-in;
@@ -66,7 +66,7 @@ body {
 
 .button:active {
     color: #F1C9C9;
-    background: #8E1010;
+    background-color: #8E1010;
     position: relative;
     top: 1px;
 }
