--- a/blog-posts/css/reset.css
+++ b/blog-posts/css/reset.css
@@ -14,11 +14,11 @@
 /* Links */
 
 a, a:link, a:visited  {
-    /* text-decoration: none; */
+    text-decoration: none;
 }
 
 a:hover  {
-    /* text-decoration: none; */
+    text-decoration: none;
 }
 
 /* Common */
