--- a/blog-posts/css/main.css
+++ b/blog-posts/css/main.css
@@ -65,7 +65,7 @@ body {
     margin-bottom: 20px;
 }
 
-.card-link {
+a.card-link {
     font-size: 20px;
     text-decoration: underline;
     color: #0277B9;
@@ -76,7 +76,7 @@ body {
 }
 
 .button {
-    text-decoration: none;
+    display: inline-block;
     text-transform: uppercase;
     font-size: 22px;
     color: #000000;
@@ -86,7 +86,8 @@ body {
     transition: background-color 0.2s ease-in, color 0.2s ease-in, border 0.2s ease-in;
 }
 
-.button:hover, .button:focus {
+.button:hover,
+.button:focus {
     color: white;
     border: 1px solid #000000;
     background-color: #000000;
