--- a/forest-travel/css/main.css
+++ b/forest-travel/css/main.css
@@ -42,12 +42,23 @@ ul {
     position: relative;
     height: 800px;
     background-color: #265847;
-    background-image: url("./../img/header-bg.jpg.jpg");
+    background-image: url("./../img/header/header-bg.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     padding-top: 50px;
     color: #FFFFFF;
+}
+
+.header-inner {
+    height: 100px;
+    background-color: #265847;
+    background-image: url(./../img/header/header-small-bg.jpg);
+    background-position: center;
+    background-size: cover;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
 }
 
 .heder-top {
@@ -126,7 +137,7 @@ ul {
     transform: translateX(-50%);
     width: 24px;
     height: 24px;
-    background-image: url(../img/arrow-down.svg.svg);
+    background-image: url(./../img/header/arrow-down.svg);
 }
 
 /* Main */
@@ -274,4 +285,95 @@ ul {
 
 .footer-widget-list li:last-child {
     margin-bottom: 0;
+}
+
+/* inner-page-tours */
+
+.inner-page-tours {
+    padding-top: 60px;
+    padding-bottom: 98px;
+    background-color: #E5E5E5;
+}
+
+.inner-page-tours-header {
+    margin-bottom: 60px;
+    text-align: center;
+}
+
+.cards-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.cards-row:last-child {
+    margin-bottom: 0;
+}
+
+.cards-column {
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+}
+
+.card-link-wrapper {
+    text-decoration: none;
+    color: #FFFFFF;
+    transition: .3s;
+}
+
+.card-link-wrapper:hover {
+    opacity: 0.9;
+    /* cursor: pointer; */
+}
+
+/* Card */
+
+.card {
+    width: 570px;
+}
+
+.card.bigger {
+    width: 670px;
+}
+
+.card.small {
+    width: 470px;
+}
+
+.card-title-wrapper {
+    display: flex;
+    align-items: center;
+    height: 80px;
+    background-color: #A6A6A6;
+    color: #FFFFFF;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.card.extreme-color .card-title-wrapper {
+    background-color: #C1B19B;
+}
+
+.card.adventures-color .card-title-wrapper {
+    background-color: #66B0BE;
+}
+
+.card.tracking-color .card-title-wrapper {
+    background-color: #876F56;
+}
+
+.card.jungle-color .card-title-wrapper {
+    background-color: #27695E;
+}
+
+.card-title {
+    font-weight: 700;
+    font-size: 28px;
+
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
