--- a/forest-travel/css/main.css
+++ b/forest-travel/css/main.css
@@ -292,7 +292,7 @@ ul {
 .inner-page-tours {
     padding-top: 60px;
     padding-bottom: 98px;
-    background-color: #E5E5E5;
+    background-color: #F2F8F6;
 }
 
 .inner-page-tours-header {
