--- a/forest-travel/css/main.css
+++ b/forest-travel/css/main.css
@@ -6,6 +6,15 @@
 
 body {
     font-family: 'PT Sans', sans-serif;
+    color: #31405B;
+}
+
+input {
+    font-family: 'PT Sans', sans-serif;
+}
+
+label {
+    cursor: pointer;
 }
 
 h1,
@@ -38,6 +47,32 @@ ul {
 
 .bg-color {
     background-color: #F2F8F6;
+}
+
+.inner-page {
+    padding-top: 60px;
+    padding-bottom: 100px;
+}
+
+.main-header {
+    font-size: 54px;
+    line-height: 1.3;
+}
+
+.button {
+    display: inline-block;
+    font-weight: 700;
+    font-size: 20px;
+    text-align: center;
+    color: #FFFFFF;
+    text-decoration: none;
+
+    padding: 12px 40px;
+    background: #0AC883;
+    box-shadow: 0px 8px 20px rgba(24, 219, 148, 0.35);
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
 }
 
 /* header */
@@ -151,6 +186,10 @@ ul {
     padding-bottom: 120px;
 }
 
+.main-content-header {
+    margin-bottom: 20px;
+}
+
 .main-row {
     display: flex;
     justify-content: space-between;
@@ -173,17 +212,9 @@ ul {
     width: 570px;
 }
 
-.header-2 {
-    font-size: 54px;
-    color: #31405B;
-    margin-bottom: 20px;
-    line-height: 1.3;
-}
-
 .main-content-text {
     font-size: 20px;
     line-height: 1.6;
-    color: #31405B;
     margin-bottom: 40px;
 }
 
@@ -194,20 +225,6 @@ ul {
 
 .main-content-text a {
     color: #138ECE;
-}
-
-.button {
-    display: inline-block;
-    font-weight: 700;
-    font-size: 20px;
-    text-align: center;
-    color: #FFFFFF;
-    text-decoration: none;
-
-    padding: 12px 40px;
-    background: #0AC883;
-    box-shadow: 0px 8px 20px rgba(24, 219, 148, 0.35);
-    border-radius: 50px;
 }
 
 /* Footer */
@@ -292,11 +309,6 @@ ul {
 }
 
 /* inner-page-tours */
-
-.inner-page {
-    padding-top: 60px;
-    padding-bottom: 100px;
-}
 
 .inner-page-tours-header {
     margin-bottom: 60px;
@@ -398,7 +410,6 @@ ul {
 
 .article-page-nav-title {
     font-size: 28px;
-    color: #31405B;
     margin-bottom: 34px;
 }
 
@@ -440,7 +451,6 @@ ul {
 .article-page-article h4,
 .article-page-article h5,
 .article-page-article h6 {
-    color: #31405B;
     margin-bottom: 15px;
     line-height: 1.2;
 }
@@ -478,7 +488,6 @@ ul {
     font-size: 20px;
     line-height: 1.6;
     margin-bottom: 15px;
-    color: #31405B;
 }
 
 .article-page-article>*:last-child {
@@ -491,4 +500,246 @@ ul {
 
 .article-page-article a {
     color: #138ECE;
+}
+
+/* Contacts page */
+
+.contacts-header {
+    margin-bottom: 40px;
+}
+
+.contact-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.contact-info {
+    width: 470px;
+}
+
+.contact-block + .contact-block {
+    margin-top: 40px;
+}
+
+.contact-block-title {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.contact-list {
+    font-size: 20px;
+    line-height: 1.6;
+}
+
+.contact-list li {
+    margin-bottom: 15px;
+}
+
+.contact-list li:last-child {
+    margin-bottom: 0;
+}
+
+.contact-list a {
+    color: #138ECE;
+    text-decoration: none;
+}
+
+.contact-list-icon {
+    position: relative;
+    padding-left: 39px;
+}
+
+.contact-list-icon.phone::before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 0;
+    display: block;
+    width: 24px;
+    height: 24px;
+    background-image: url(./../img/feather-icon/phone.svg);
+}
+
+.contact-list-icon.mail::before{
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 0;
+    display: block;
+    width: 24px;
+    height: 24px;
+    background-image: url(./../img/feather-icon/mail.svg);
+}
+
+.contact-list-icon.address::before{
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 0;
+    display: block;
+    width: 24px;
+    height: 24px;
+    background-image: url(./../img/feather-icon/map-pin.svg);
+}
+
+/* Contact form */
+
+.form {
+    width: 630px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 40px;
+}
+
+.form-title {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.form-group {
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.form-group:last-of-type {
+    margin-bottom: 35px;
+}
+
+.form-group-title {
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+.form-group-row {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-group-row > .input +.input {
+    margin-left: 10px;
+}
+
+.input {
+    width: 100%;
+    height: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    background: #EEEEEE;
+    border: 1px solid #C0C0C0;
+    border-radius: 6px;
+
+    font-size: 18px;
+    color: #31405B;
+}
+
+.input::placeholder {
+    color: rgba(49, 64, 91, 0.5);
+}
+
+.radio-row {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 21px;
+}
+
+.radio-row:last-child {
+    margin-bottom: 0;
+}
+
+.real-radio {
+    position: absolute;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    z-index: -1;
+    appearance: none;
+}
+
+.real-radio:focus + .custom-radio {
+    box-shadow: 0 0 0px 2px #333;
+}
+
+.custom-radio {
+    position: relative;
+    display: inline-block;
+    flex-shrink: 0;
+    width: 20px;
+    height: 20px;
+    background: #EEEEEE;
+    border: 1px solid #C0C0C0;
+    border-radius: 50%;
+    vertical-align: bottom;
+    margin-right: 15px;
+}
+
+.custom-radio::before {
+    display: block;
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    width: 12px;
+    height: 12px;
+    background: #2AB698;
+    border-radius: 50%;
+    transition: transform 0.2s ease-in;
+}
+
+.real-radio:checked + .custom-radio::before{
+    transform: translate(-50%, -50%) scale(1);
+}
+
+/* Checkbox */
+
+.checkbox-row {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 17px;
+}
+
+.real-checkbox {
+    position: absolute;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    z-index: -1;
+    appearance: none;
+}
+
+.custom-checkbox {
+    position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: #EEEEEE;
+    border: 1px solid #C0C0C0;
+    border-radius: 2px;
+    vertical-align: bottom;
+    margin-right: 15px;
+    flex-shrink: 0;
+}
+
+.custom-checkbox::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    width: 17px;
+    height: 17px;
+    transition: transform 0.2s ease-in;
+    background-image: url(../img/feather-icon/check.svg);
+}
+
+.real-checkbox:checked + .custom-checkbox::before{
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.real-checkbox:focus + .custom-checkbox {
+    box-shadow: 0 0 0px 2px #333;
 }
