--- a/forest-travel/css/main.css
+++ b/forest-travel/css/main.css
@@ -330,7 +330,7 @@ legend {
     width: 270px;
 }
 
-.footer-wiget-title {
+.footer-widget-title {
     font-size: 24px;
     margin-bottom: 30px;
 }
