--- a/forest-travel/css/media.css
+++ b/forest-travel/css/media.css
@@ -90,7 +90,7 @@
         font-size: 14px;
     }
 
-    .footer-wiget-title {
+    .footer-widget-title {
         margin-bottom: 20px;
     }
 
@@ -182,6 +182,10 @@
     .footer-copyright {
         width: 100%;
     }
+
+    .footer-widget+.footer-widget {
+        margin-left: 0px;
+    }
 }
 
 
@@ -259,10 +263,6 @@
         margin-bottom: 40px;
     }
 
-    .footer-widget+.footer-widget {
-        margin-left: 0px;
-    }
-
     .footer-widget {
         margin-bottom: 40px;
     }
@@ -275,8 +275,9 @@
         width: auto;
     }
 
-    .footer-wiget-title {
+    .footer-widget-title {
         font-size: 20px;
+        margin-bottom: 10px;
     }
 
     .footer-widget a,
@@ -288,11 +289,15 @@
         padding-top: 0px;
     }
 
-    .footer-logo {
-        margin-bottom: 0px;
+    .footer-logo{
+        margin-bottom: 10px;
     }
 
     .footer-copyright {
         width: 290px;
+    }
+    
+    .footer-widget-list li {
+        margin-bottom: 10px;
     }
 }
