--- a/bem-naming/css/main.css
+++ b/bem-naming/css/main.css
@@ -31,7 +31,7 @@ img {
 .section__container {
 	padding: 0 15px;
 	margin: 0 auto;
-	width: 1110px;
+	width: 1140px;
 }
 
 .product__row {
@@ -40,7 +40,7 @@ img {
 }
 
 .product__image {
-	margin-top: 30px;
+	padding-top: 30px;
 }
 
 .product__description {
@@ -51,7 +51,7 @@ img {
 	margin-bottom: 21px;
 }
 
-.main__title {
+.product__title .header {
 	font-size: 28px;
 	line-height: 1.3;
 }
@@ -114,7 +114,7 @@ img {
 	text-align: center;
 }
 
-.other-products__header {
+.other-products__title .header {
 	font-family: 'Playfair Display', serif;
 	font-size: 28px;
 	line-height: 1.3;
