--- a/forest-travel/css/main.css
+++ b/forest-travel/css/main.css
@@ -1,32 +1,34 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-
-    font-family: 'PT Sans', sans-serif;
-    color: #31405B;
+  height: 100%;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  font-family: 'PT Sans', sans-serif;
+  color: #31405B;
 }
 
 body > * {
-    flex-shrink: 0;
+  flex-shrink: 0;
 }
 
 input {
-    font-family: 'PT Sans', sans-serif;
+  font-family: 'PT Sans', sans-serif;
 }
 
 label {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 h1,
@@ -37,310 +39,627 @@ h5,
 h6,
 p,
 body {
-    margin: 0;
+  margin: 0;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 fieldset {
-    display: block;
-    border: none;
-    margin: 0;
-    padding: 0;
+  display: block;
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 
 legend {
-    display: block;
-    border: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+  display: block;
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 .container {
-    width: 1200px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .bg-color {
-    background-color: #F2F8F6;
+  background-color: #F2F8F6;
 }
 
 .inner-page {
-    padding-top: 60px;
-    padding-bottom: 100px;
+  padding-top: 60px;
+  padding-bottom: 100px;
 }
 
 .main-header {
-    font-size: 54px;
-    line-height: 1.3;
+  font-size: 54px;
+  line-height: 1.3;
 }
 
 .button {
-    display: inline-block;
-    font-weight: 700;
-    font-size: 20px;
-    text-align: center;
-    color: #FFFFFF;
-    text-decoration: none;
-
-    padding: 12px 41px;
-    background: #0AC883;
-    box-shadow: 0px 8px 20px rgba(24, 219, 148, 0.35);
-    border-radius: 50px;
-    border: none;
-    cursor: pointer;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 20px;
+  text-align: center;
+  color: #FFFFFF;
+  text-decoration: none;
+  padding: 12px 41px;
+  background: #0AC883;
+  box-shadow: 0px 8px 20px rgba(24, 219, 148, 0.35);
+  border-radius: 50px;
+  border: none;
+  cursor: pointer;
 }
 
-/* header */
-
 .header {
-    position: relative;
-    height: 800px;
-    background-color: #265847;
-    background-image: url("./../img/header/header-bg.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    padding-top: 50px;
-    color: #FFFFFF;
+  position: relative;
+  height: 800px;
+  background-color: #265847;
+  background-image: url("./../img/header/header-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 50px;
+  color: #FFFFFF;
 }
 
 .header-inner {
-    height: 100px;
-    background-color: #265847;
-    background-image: url(./../img/header/header-small-bg.jpg);
-    background-position: center;
-    background-size: cover;
-    color: #FFFFFF;
-    display: flex;
-    align-items: center;
+  height: 100px;
+  background-color: #265847;
+  background-image: url(./../img/header/header-small-bg.jpg);
+  background-position: center;
+  background-size: cover;
+  color: #FFFFFF;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
 }
 
 .header-top {
-    width: 1170px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    font-family: 'Lobster', cursive;
-    font-style: normal;
-    font-size: 40px;
+  width: 1170px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+          align-items: center;
 }
 
 .header-nav {
-    font-size: 22px;
+  font-size: 22px;
 }
 
 .header-nav-button {
-    display: none;
+  display: none;
 }
 
 .header-nav-list {
-    display: flex;
+  display: -webkit-box;
+  display: flex;
 }
 
 .header-nav-item {
-    margin-right: 50px;
+  margin-right: 50px;
 }
 
 .header-nav-item:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 .header-nav-link {
-    color: #FFFFFF;
-    text-decoration: none;
+  color: #FFFFFF;
+  text-decoration: none;
 }
 
 .header-content {
-    position: absolute;
-    width: 1170px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  position: absolute;
+  width: 1170px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .header-title {
-    margin-bottom: 20px;
-    margin-top: 15px;
-    font-size: 60px;
-    line-height: 1;
+  margin-bottom: 20px;
+  margin-top: 15px;
+  font-size: 60px;
+  line-height: 1;
 }
 
 .header-content p {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .header-scroll {
-    position: absolute;
-    display: inline-block;
-    bottom: 25px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding-bottom: 34px;
-
-    font-size: 16px;
-    text-align: center;
-    text-decoration: none;
-    color: #FFFFFF;
+  position: absolute;
+  display: inline-block;
+  bottom: 25px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  padding-bottom: 34px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  color: #FFFFFF;
 }
 
 .header-scroll::after {
-    content: "";
-    position: absolute;
-    display: block;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 18px;
-    height: 24px;
-    background-image: url(./../img/header/arrow-down.svg);
+  content: "";
+  position: absolute;
+  display: block;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 18px;
+  height: 24px;
+  background-image: url(./../img/header/arrow-down.svg);
 }
 
-/* Main */
+.logo {
+  font-family: 'Lobster', cursive;
+  font-style: normal;
+  font-size: 40px;
+}
 
 .main {
-    padding-top: 120px;
-    padding-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .main-content-header {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .main-row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 120px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 120px;
 }
 
 .main-row:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .main-row:nth-child(even) {
-    flex-direction: row-reverse;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+          flex-direction: row-reverse;
 }
 
 .main-content {
-    width: 470px;
+  width: 470px;
 }
 
 .main-img {
-    width: 570px;
+  width: 570px;
 }
 
 .main-content-text {
-    font-size: 20px;
-    line-height: 1.6;
-    margin-bottom: 40px;
+  font-size: 20px;
+  line-height: 1.6;
+  margin-bottom: 40px;
 }
 
 .main-content-text p {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .main-content-text a {
-    color: #138ECE;
+  color: #138ECE;
 }
 
-/* Footer */
-
 .footer {
-    margin-top: auto;
-    background-color: #265847;
-    padding-top: 70px;
-    padding-bottom: 90px;
-    color: white;
+  margin-top: auto;
+  background-color: #265847;
+  padding-top: 70px;
+  padding-bottom: 90px;
+  color: white;
 }
 
 .footer a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .footer a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .footer-row {
-    display: flex;
-    justify-content: space-between;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
 }
 
 .footer-widgets-wrapper {
-    display: flex;
-    padding-top: 10px;
+  display: -webkit-box;
+  display: flex;
+  padding-top: 10px;
 }
 
 .footer-copyright {
-    width: 270px;
+  width: 270px;
 }
 
 .footer-copyright p {
-    font-size: 16px;
-    line-height: 1.6;
+  font-size: 16px;
+  line-height: 1.6;
 }
 
 .footer-logo {
-    margin-bottom: 26px;
+  margin-bottom: 26px;
 }
 
 .footer-widget {
-    font-size: 18px;
+  font-size: 18px;
 }
 
-.footer-widget+.footer-widget {
-    margin-left: 30px;
+.footer-widget + .footer-widget {
+  margin-left: 30px;
 }
 
 .footer-widget p {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .footer-widget p:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .footer-widget-info {
-    width: 170px;
+  width: 170px;
 }
 
 .footer-widget-services,
 .footer-widget-contacts {
-    width: 270px;
+  width: 270px;
 }
 
 .footer-widget-title {
-    font-size: 24px;
-    margin-bottom: 30px;
+  font-size: 24px;
+  margin-bottom: 30px;
 }
 
 .footer-widget-list li {
-    margin-bottom: 15px;
-    font-size: 18px;
+  margin-bottom: 15px;
+  font-size: 18px;
 }
 
 .footer-widget-list li:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
+
+@media (max-width: 1199px) {
+  .container {
+    width: 900px;
+  }
+
+  .header {
+    height: 591px;
+  }
+
+  .header-top,
+  .header-content {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .header-nav-button {
+    display: block;
+    background: transparent;
+    border: none;
+  }
+
+  .header-nav-list {
+    display: none;
+  }
+
+  .header-title {
+    font-size: 52px;
+  }
+
+  .header-scroll {
+    font-size: 0;
+  }
+
+  .main {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+
+  .main-header {
+    font-size: 50px;
+    line-height: 1;
+  }
+
+  .main-content-text {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  .main-content {
+    width: 420px;
+  }
+
+  .main-img {
+    width: 420px;
+  }
+
+  .main-row {
+    margin-bottom: 80px;
+  }
+
+  .footer {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .footer-widget-services {
+    display: none;
+  }
+
+  .footer-row {
+    flex-wrap: wrap-reverse;
+  }
+
+  .footer-logo .logo {
+    font-size: 30px;
+  }
+
+  .footer-logo {
+    margin-bottom: 20px;
+  }
+
+  .footer-copyright {
+    width: 195px;
+  }
+
+  .footer-copyright p {
+    font-size: 14px;
+  }
+
+  .footer-widget-title {
+    margin-bottom: 20px;
+  }
+
+  .footer-widget-info {
+    width: 195px;
+  }
+}
+@media (max-width: 899px) {
+  .container {
+    width: 600px;
+  }
+
+  .header-content {
+    width: 100%;
+  }
+
+  .header-title {
+    font-size: 42px;
+  }
+
+  .header-content p {
+    font-size: 20px;
+  }
+
+  .main {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  .main .container {
+    width: 100%;
+  }
+
+  .main-header {
+    font-size: 42px;
+  }
+
+  .main-content-text {
+    font-size: 16px;
+  }
+
+  .button {
+    font-size: 18px;
+    height: 46px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .main-content {
+    width: auto;
+  }
+
+  .main-img {
+    width: 170px;
+    flex-shrink: 0;
+    margin-right: 30px;
+  }
+
+  .main-img img {
+    height: 100%;
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
+  .main-row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+            flex-direction: row-reverse;
+    margin-bottom: 60px;
+  }
+
+  .footer {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .footer .container {
+    width: 100%;
+  }
+
+  .footer-widgets-wrapper {
+    width: 100%;
+    -webkit-box-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 50px;
+    padding-top: 0;
+  }
+
+  .footer-copyright {
+    width: 100%;
+  }
+
+  .footer-widget + .footer-widget {
+    margin-left: 0px;
+  }
+}
+@media (max-width: 599px) {
+  .container {
+    width: 320px;
+  }
+
+  .logo {
+    font-size: 30px;
+  }
+
+  .header-title {
+    font-size: 32px;
+    margin-bottom: 10px;
+  }
+
+  .header-content p {
+    font-size: 18px;
+  }
+
+  .main {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .main .container {
+    width: 100%;
+  }
+
+  .main-header {
+    font-size: 34px;
+  }
+
+  .main-img {
+    width: auto;
+    height: 150px;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .main-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+            flex-direction: column-reverse;
+    margin-bottom: 40px;
+  }
+
+  .main-row:nth-child(even) {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+            flex-direction: column-reverse;
+  }
+
+  .footer {
+    text-align: center;
+  }
+
+  .footer-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+            align-items: center;
+  }
+
+  .footer-widget-services {
+    display: block;
+    width: auto;
+  }
+
+  .footer-widget-contacts {
+    width: auto;
+  }
+
+  .footer-widgets-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    padding-top: 0;
+    margin-bottom: 40px;
+  }
+
+  .footer-widget {
+    margin-bottom: 40px;
+  }
+
+  .footer-widget:last-child {
+    margin-bottom: 0;
+  }
+
+  .footer-widget-info {
+    width: auto;
+  }
+
+  .footer-widget-title {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  .footer-widget a,
+  .footer-widget p {
+    font-size: 16px;
+  }
+
+  .footer-widget {
+    padding-top: 0px;
+  }
+
+  .footer-logo {
+    margin-bottom: 10px;
+  }
+
+  .footer-copyright {
+    width: 290px;
+  }
+
+  .footer-widget-list li {
+    margin-bottom: 10px;
+  }
+}
+
+/*# sourceMappingURL=main.css.map */
 
 /* inner-page-tours */
 
